[gd_scene load_steps=2 format=3 uid="uid://dxr6nuqdwm75v"]

[ext_resource type="Script" path="res://scenes/ui/debug_screen.gd" id="1_hmelx"]

[node name="debug_screen" type="CanvasLayer"]
script = ExtResource("1_hmelx")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="RemoveAllEnemiesButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove All Enemies"

[node name="SpawnBossButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Spawn Boss"

[node name="ResetSceneButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Scene"

[node name="GodModeButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "God Mode"

[node name="LevelUpButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level Up"
